[project]
name = "pg-logical-replication-helper"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "idna==3.11",
    "iniconfig==2.3.0",
    "packaging==26.0",
    "pluggy==1.6.0",
    "psycopg==3.3.2",
    "psycopg-binary==3.3.2",
    "psycopg-pool==3.3.0",
    "pygments==2.19.2",
    "python-dotenv==1.2.1",
    "requests==2.32.5",
    "typing-extensions==4.15.0",
    "urllib3==2.6.3",
    "wrapt==2.0.1",
]

[dependency-groups]
dev = [
    "docker==7.1.0",
    "pytest>=9.0.2",
    "pytest-cov==7.0.0",
    "pytest-mock==3.15.1",
    "testcontainers==4.14.0",
]
